syntax = "proto3";
package runecraftstudios.pastello.game.puzzle.v1;

import "runecraftstudios/pastello/game/types/v1/types.proto";

option go_package = "github.com/runecraft-studios/pastello/internal/gen/runecraftstudios/pastello/game/puzzle/v1;puzzlev1";

message MovePieceCommand {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
  runecraftstudios.pastello.game.types.v1.PlayerId      player_id  = 2;
  int32 from_x = 3;
  int32 from_y = 4;
  int32 to_x   = 5;
  int32 to_y   = 6;
}

message UndoMoveCommand {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
  runecraftstudios.pastello.game.types.v1.PlayerId      player_id  = 2;
}

message PieceMovedEvent {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
  int32 from_x = 2;
  int32 from_y = 3;
  int32 to_x   = 4;
  int32 to_y   = 5;
}

message MoveUndoneEvent {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
}
